# cs2-rcon-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
src/rcon_mcp/: __init__.py  __main__.py  commands.py  config.py  server.py  utils.py
src/rcon_mcp/commands/: commands.py
src/rcon_mcp/server/: server.py
