[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcon-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for CS2 RCON management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rcon",
    "mcp==1.3.0",
    "python-dotenv==1.0.1",
    "sse-starlette==2.2.1",
    "starlette==0.46.0",
    "uvicorn==0.34.0"
]

[project.scripts]
rcon-mcp = "rcon_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rcon_mcp"]
